@startuml
'https://plantuml.com/class-diagram

Sensor_Value --|> Sensor : extends >
DomainId --|> ValueObject : extends >
ONF01S ..|> Sensor_Value : implements >
ONF01S ..|> AggregateRoot : implements >
ONF01SValue ..|> ValueObject : implements >
ONF01SValue ..|> Value : implements >
DeviceId ..|> DomainId : implements >
SensorId ..|> DomainId : implements >
SensorModelId ..|> DomainId : implements >
ONF01S -- ONF01SValue : uses >
ONF01S -- DeviceId : contains >
ONF01S -- SensorId : contains >
ONF01S -- SensorModelId : contains >
AggregateRoot --|> DomainEntity : extends >


interface DomainEntity{
}

interface ValueObject{
}

interface DomainId {
}

interface Sensor{
}

interface Sensor_Value{
+ getValue()
}

interface AggregateRoot{
}

interface Value{
}

class ONF01S{
- _sensorValue: ONF01SValue
- _sensorID: SensorId
- _deviceID: DeviceId
- _sensorModelID: SensorModelId
- _sensorData: Map <Integer, String>

# ONF01S(deviceId: DeviceId, sensorModelId: SensorModelId, sensorID: SensorId): ONF01S
- areConstructorArgumentsValid(sensorID: SensorID, deviceID: DeviceId, sensorModelID: SensorModelID): boolean
+ identity(): SensorId
+ sameAs (object: Object): boolean
+ equals (object: Object): boolean
+ setData(): Map <Integer, String>
+ setValue(readingNumber: int)
+ getValue(): Value
}


class ONF01SValue {

- _onOffValue: String
# ONF01SValue (value: String): ONF01SValue
+ areConstructorArgumentsValid(onOffValue: String) boolean
+ equals (object: Object): boolean
+ toString(): String
}

class DeviceId{
- _id: String
# DeviceId(id: String): DeviceId
+ equals (object: Object): boolean
+ hashCode(): int
+ toString(): String
}

class SensorModelId{
- _id: String
# SensorModelId(id: String): SensorModelId
+ equals (object: Object): boolean
+ toString(): String
}

class SensorId{
- _id: String
# SensorId(id: String): SensorId
+ equals (object: Object): boolean
+ toString(): String
}


@enduml